add dataoas e bannner description

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,7 @@
 @import "swiper/css";
 @import "swiper/css/navigation";
 @import "swiper/css/pagination";
+@import "aos/dist/aos.css";
 
 body {
     padding-top: 64px;
@@ -11,6 +12,10 @@ body {
     transition: all 0.5s;
     background-color: rgba(255, 255, 255, 0.7) !important;
     backdrop-filter: blur(20px);
+
+    &.shadow {
+        padding: 20px 0;
+    }
 
     .navbar-toggler {
         order: 1;
@@ -73,5 +78,25 @@ body {
 
     &.swiper-initialized {
         opacity: 1;
+    }
+}
+
+.description-banner {
+    .description-banner-item {
+        padding: 50px 10px 0;
+        display: flex;
+        align-items: center;
+        border-radius: 12px 12px 0 0;
+        background-image: linear-gradient(
+            180deg,
+            rgba(244, 244, 249, 0.8) 50%,
+            rgba(244, 244, 249, 0.05) 100%
+        );
+        h6 {
+            font-size: 1.25rem;
+            font-weight: 700;
+            margin-top: 20px;
+            margin-bottom: 12px;
+        }
     }
 }
