--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -99,4 +99,22 @@ body {
             margin-bottom: 12px;
         }
     }
+
+    .description-banner--banner {
+        margin-top: 40px;
+        .content {
+            text-align: center;
+            padding: 50px min(10%, 200px) 50px;
+            background-color: #e8e3f5;
+            border-radius: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+
+            p {
+                margin: 18px 0 70px;
+            }
+        }
+    }
 }
