melhora pro deploy

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -122,6 +122,7 @@ body {
     .icons-section {
         .svg {
             height: 43px;
+            fill: var(--bs-primary);
             stroke: var(--bs-primary);
         }
 
