--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -140,7 +140,7 @@ body {
         margin-top: 100px;
         display: grid;
         gap: 32px;
-        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(min(100%, 400px), 1fr));
         .case-card {
             display: flex;
             flex-direction: column;
