--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -281,7 +281,7 @@ body {
     }
 
     .form-control {
-        background-color: #f5f6f8;
+        background-color: #e8e9ec;
         border: none;
         color: gray;
         font-weight: 200;
